UI is udjusting, UWP works, navibar removed

--- a/GymProgress/GymProgress/GymProgress.UWP/GymProgress.UWP.csproj
+++ b/GymProgress/GymProgress/GymProgress.UWP/GymProgress.UWP.csproj
@@ -95,15 +95,18 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Model\SQLiteHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
+    <AndroidAsset Include="Assets\Fonts\Lobster.otf" />
     <None Include="GymProgress.UWP_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="logo.jpg" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-100.png" />
     <Content Include="Assets\LockScreenLogo.scale-125.png" />
