--- a/GymProgress/GymProgress/GymProgress/GymProgress.csproj
+++ b/GymProgress/GymProgress/GymProgress/GymProgress.csproj
@@ -22,5 +22,8 @@
     <EmbeddedResource Update="View\ExerciseView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="View\TrainingListView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
