training adding look added

--- a/GymProgress/GymProgress/GymProgress/GymProgress.csproj
+++ b/GymProgress/GymProgress/GymProgress/GymProgress.csproj
@@ -25,5 +25,8 @@
     <EmbeddedResource Update="View\TrainingListView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="View\TrainingView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
