--- a/GymProgress/GymProgress/GymProgress.Android/GymProgress.Android.csproj
+++ b/GymProgress/GymProgress/GymProgress.Android/GymProgress.Android.csproj
@@ -47,8 +47,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="sqlite-net-pcl">
-      <Version>1.4.118</Version>
+    <PackageReference Include="SQLiteNetExtensions.Async">
+      <Version>2.0.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.280555" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="25.4.0.2" />
