--- a/GymProgress/GymProgress/GymProgress.UWP/GymProgress.UWP.csproj
+++ b/GymProgress/GymProgress/GymProgress.UWP/GymProgress.UWP.csproj
@@ -150,8 +150,8 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="sqlite-net-pcl">
-      <Version>1.4.118</Version>
+    <PackageReference Include="SQLiteNetExtensions.Async">
+      <Version>2.0.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.280555" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.0.1" />
