--- a/GymProgress/GymProgress/GymProgress.Android/GymProgress.Android.csproj
+++ b/GymProgress/GymProgress/GymProgress.Android/GymProgress.Android.csproj
@@ -47,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microcharts">
+      <Version>0.7.1</Version>
+    </PackageReference>
+    <PackageReference Include="Microcharts.Forms">
+      <Version>0.7.1</Version>
+    </PackageReference>
     <PackageReference Include="SQLiteNetExtensions.Async">
       <Version>2.0.0</Version>
     </PackageReference>
