--- a/GymProgress/GymProgress/GymProgress.UWP/GymProgress.UWP.csproj
+++ b/GymProgress/GymProgress/GymProgress.UWP/GymProgress.UWP.csproj
@@ -150,6 +150,12 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microcharts">
+      <Version>0.7.1</Version>
+    </PackageReference>
+    <PackageReference Include="Microcharts.Forms">
+      <Version>0.7.1</Version>
+    </PackageReference>
     <PackageReference Include="SQLiteNetExtensions.Async">
       <Version>2.0.0</Version>
     </PackageReference>
